# ci-cd-tests

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: bandit.yaml  development.yaml  pre_commit.yaml  pytest.yaml
