[tool.poetry]
name = "ci-cd-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ci_cd_tests"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.4"

[tool.black]
exclude = '''
    env |
    venv |
    venv39 |
'''
line-length = 120

[tool.isort]
profile = "black"
src_paths = "src"
skip = [".env", ".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
